--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-redux": "^7.1.34",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
