--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "styled-jsx": "^5.1.6",
     "typescript": "^5.7.3"
   },
   "scripts": {
