--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react": "^19.0.8",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
